
- Bug #532646: The object set to the __call__ attribute has its own __call__
  attribute checked; this continues until the attribute can no longer be found
  or segfaulting.  Recursion limit is now followed.

- Bug #1454485: Don't crash on Unicode characters <0.

- Patch #1488312, Fix memory alignment problem on SPARC in unicode

Extension Modules
-----------------

- Bug #1512695: cPickle.loads could crash if it was interrupted with
  a KeyboardInterrupt.

- Change binascii.hexlify() to accept any read-only buffer and not just a char
  buffer.

- Fixed a potentially invalid memory access of CJKCodecs' shift-jis decoder.

- Calling Tk_Init twice is refused if the first call failed as that
  may deadlock.

- Patch #1191065: Fix preprocessor problems on systems where recvfrom
  is a macro.

- Bug #1467952: os.listdir() now correctly raises an error if readdir()
  fails with an error condition.

- Fix bsddb.db.DBError derived exceptions so they can be unpickled.

- Bug #1117761: bsddb.*open() no longer raises an exception when using
  the cachesize parameter.

- Bug #1493322: bsddb: the __len__ method of a DB object has been fixed to
  return correct results.  It could previously incorrectly return 0 in some
  cases.  Fixes SF bug 1493322 (pybsddb bug 1184012).


Library
-------

- The email package has improved RFC 2231 support, specifically for
  recognizing the difference between encoded (name*0*=<blah>) and non-encoded
  (name*0=<blah>) parameter continuations.  This may change the types of
  values returned from email.message.Message.get_param() and friends.
  Specifically in some cases where non-encoded continuations were used,
  get_param() used to return a 3-tuple of (None, None, string) whereas now it
  will just return the string (since non-encoded continuations don't have
  charset and language parts).

  Also, whereas % values were decoded in all parameter continuations, they are
  now only decoded in encoded parameter parts.
