@@ -31,6 +31,9 @@ Core and builtins
 Extension Modules
 -----------------
 
+- Bug #1471938: Fix curses module build problem on Solaris 8; patch by 
+  Paul Eggert.
+ 
 - Bug #1512695: cPickle.loads could crash if it was interrupted with
   a KeyboardInterrupt.
 
